test/error/iocheck/err8.rzy
// Error: transition guard is not allowed to write state


interface
  IfaceEvent
    function event();
  end
  
component
  Err8
    input
      in  : IfaceEvent;
    
    implementation hfsm(A)
    
    var
      a : U{8};
    
    entry
      a := 0;
    end
    
    function foo:Boolean
      a := a + 1;
      return a > 10;
    end
    
    state A end
    state B end
    
    transition A to B by in.event() if foo();
    
  end

